# p2kbot

./: .gitignore  Dockerfile.botsrv  Dockerfile.convsrv  README.md  pyproject.toml  ssmtpd.py
p2kbot/: __init__.py  __main__.py  botsrv.py  broker.py  calibre_.py  config.py  convsrv.py  db.py  kindle.py  mx_resolver.py  state.py  utils.py
