[tool.poetry]
name = "p2kbot"
version = "0.1.0"
description = "Push to Kindle Bot"
authors = ["Hung-I Wang <whygowe@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.6"
aiogram = "^2.5"
aiosqlite = "^0.11.0"
autopep8 = "^1.4.4"
aiofiles = "^0.4.0"
aiosmtplib = "^1.1.2"
aiodnsresolver = "^0.0.149"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
